--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-python-telegram-bot[job-queue]>=20.6
-aiohttp>=3.9.0
-pandas>=2.2
-numpy>=1.26
-requests>=2.31
-ta==0.11.0
+python-telegram-bot[job-queue]>=20.6,<21
+httpx>=0.27.0
+pandas>=2.2,<3
+numpy>=1.26,<2
