--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-python-telegram-bot[job-queue]>=20.6,<21
-httpx>=0.27.0
-pandas>=2.2,<3
-numpy>=1.26,<2
+python-telegram-bot[job-queue]==20.7
+httpx==0.27.2
+pandas==2.2.2
+numpy==1.26.4
+requests==2.32.3
+ta==0.11.0
